HDDS-13217. Fix TestOmSnapshotCheckpointDbContent compile errors.
Use Java 8 compatible Collections.singletonMap, correct OmSnapshot and
UncheckedAutoCloseableSupplier imports.